# GPU-Joins-Evaluation

./: CMakeLists.txt  Makefile  configure.sh  names.csv  run.sh  run2.sh
exp/: run_join_exp.py
src/cudf_join/: cudf_join.cpp  cudf_join.cu  cudf_join.hpp  cudf_join_impl.cpp  cudf_join_kernel.cu  experiment_util.cuh  join_kernels.cuh  main.cpp  operators.cuh  partitioned_hash_join.cuh  tpc_utils.hpp  tuple.cu  tuple.cuh  utils.cuh
src/cudf_join_test/: cudf_join_impl.cpp  cudf_join_test.hpp
src/data_gen/: generator.cuh
src/volcano/: CudfJoin.cpp  CudfJoin.cuh  experiment_util.cuh  inner_join_tables.cpp  join_exp.cpp  join_exp.cu  join_kernels.cu  join_kernels.cuh  mem_manager.hpp  operators_wrapper.cu  operators_wrapper.hpp  partitioned_hash_join.cuh  phj_util.cuh  tpcds_q64.cu  tuple.cuh  tuple_wrapper.h  tuple_wrapper.hpp  utils.cu  utils.cuh  utils_wrapper.hpp
